fix video play on iphone

--- a/client/assets/sass/_global.scss
+++ b/client/assets/sass/_global.scss
@@ -500,6 +500,7 @@ header {
   border: none !important;
   padding-bottom: 0;
   background: transparent !important;
+  font-size: 16px;
 }
 
 .multiselect__content-wrapper {
